--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "gcp-build": "tsc -p .",
     "create-env": "printenv > .env"
   },
+  "engines": {
+    "node": "16.x.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
