--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "openai": "^3.1.0"
+    "openai": "^3.1.0",
+    "rimraf": "^4.1.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
