--- a/package.json
+++ b/package.json
@@ -15,24 +15,39 @@
     "gcp-build": "tsc -p .",
     "create-env": "printenv > .env"
   },
-  "engines": {
-    "node": "16.x.x"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "types": "./src/express/index.d.ts",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.1.5",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "nanoid": "^4.0.2",
     "openai": "^3.1.0",
-    "rimraf": "^4.1.2"
+    "rimraf": "^4.1.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
+    "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "prettier": "^2.8.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
